--- a/index.html
+++ b/index.html
@@ -2,42 +2,61 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
         <title>The Daily Puzzle</title>
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="./css/date.css"> <!--Clock css file-->
+        <link rel="stylesheet" href="./css/styles.css"> 
+        <script src="./js/date.js"></script> <!--Clock js file-->
+        <script src="./js/index.js"></script>
     </head>
 
-    <body class="background fonts">
-        <h1>The Daily Puzzle</h1>
+    <body onload="initClock()"> 
 
-        <p>This paragraph will give a breif description of what this project entails</p>
+        <div class="web-links">
+            <a href="./sudoku.html"><button>Daily Sudoku</button></a>
+            <a href=""><button>Monthly Leaderboards</button></a>
+            <a href=""><button>NFT Gallery</button></a>
+            <a href=""><button>Tokenomics</button></a>
+        </div>
+        <div class="xumm">
+            <a href=""><button class="login">Login with <strong>XUMM</strong></button></a>
+        </div>
+        <h1 class="title">The Daily Puzzle</h1>
+
+        <p class="info">This paragraph will give a breif description of what this project entails</p>
         
-        <a href="./sudoku.html" class="hyperlink">
-            <img src="./images/sudoku.jpg" class="puzzles">
-            <button>
-                <h3>Daily Sudoku</h3>
-            </button>
-        </a>
-        <h3>Leaderboards</h3>
-        <a href="" class="hyperlink">
-            <button>LOGIN WITH XUMM</button>
-        </a>
-        <p>
-            Purchase tickets here
-            <a href="" class="hyperlink">
-                <button class="sologenic"><strong>solo</strong>genic <strong class="redSolo">DEX</strong></button>
-            </a>
-        </p>
-        <div>
-            <a href="https://twitter.com/dailyPuzzleXRPL" class="hyperlink">
-                <img src="./images/twitter-logo.png" class="socials">
+        <div class="exchange">
+            <p>Purchase tickets on the</p>
+            <a href="" class="hyperlink"><button class="sologenic"><strong>solo</strong>genic <strong class="redSolo">DEX</strong></button></a>
+        </div>
+
+        <!-- Below is the HTML for the clock -->
+        <div class="date-time">
+            <div class="date">
+                <span id="day-name"></span>
+                <span id="month"></span>
+                <span id="day-number"></span>
+                <span id="year"></span>
+            </div>
+            <div class="time">
+                <span id="hour"></span>:
+                <span id="minute"></span>:
+                <span id="second"></span>
+                <span id="period"></span>
+            </div>
+        </div>
+        
+        <div class="footer">
+            <a href="https://twitter.com/dailyPuzzleXRPL">
+                <img src="./images/twitter-logo.png" class="twitter">
             </a>
 
-            <a href="https://medium.com/@dailypuzzlexrpl" class="hyperlink socials">
-                <img src="./images/medium-logo.png" class="socials">
+            <a href="https://medium.com/@dailypuzzlexrpl">
+                <img src="./images/medium-logo.png" class="medium">
             </a>
 
-            <a href="https://www.instagram.com/dailypuzzlexrpl/" class="hyperlink socials">
-                <img src="./images/instagram-logo.png" class="socials">
+            <a href="https://www.instagram.com/dailypuzzlexrpl/">
+                <img src="./images/instagram-logo.png" class="instagram">
             </a>
         </div>
     </body>
