THE CONTENTS IN THE TEST DIRECTORY (WHICH IS FOUND WITHIN THE JS DIRECTORY) INCLUDE THE VARIOUS ATTEMPTS AT CREATING A UNLIMITED SUDOKU PUZZLE GENERATOR (HOWEVER THEY WERE UNSUCCESSFUL AT THE TIME BEING). WAS ABLE TO IMPLEMENT A SUDOKU GENERATOR. NEW PUZZLE IS GENERATED WHENEVER THE PAGE IS REFRESHED. NEXT STEP WILL BE TO ONLY GENERATE A NEW PUZZLE WHEN THE CLOCK HITS 12:00 AM EST, AND TO KEEP THE SAME PUZZLE AND TIMER INFORMATION EVEN AFTER THE PAGE IS REFRESHED AND/OR CLOSED. CREATED A INSTRUCTIONS.INDEX FILE, WHICH CONTAINS THE INSTRUCTIONS FOR THE SUDOKU GAME. HOWEVER, IT STILL MUST BE FORMATTED USING CSS.

--- a/js/test/test.html
+++ b/js/test/test.html
@@ -4,17 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
         <title>The Daily Puzzle</title>
-        <script src="generator.js"></script>
+       <!-- <script src="generator.js"></script> -->
+        <script src="generator2.js"></script>
     </head>
-    <body onload="firstRowGeneration(),
-    secondRowGeneration(), 
-    thirdRowGeneration(), 
-    fourthRowGeneration(),
-    fifthRowGeneration(),
-    sixthRowGeneration(),
-    seventhRowGeneration(),
-    eighthRowGeneration(),
-    ninthRowGeneration()">
+    <body>
 
     </body>
 </html>
