--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <div class="web-links">
             <a href="./sudoku.html"><button>Daily Sudoku</button></a>
+            <a href="./instructions.html"><button>Instructions</button></a>
             <a href=""><button>Monthly Leaderboards</button></a>
             <a href=""><button>NFT Gallery</button></a>
             <a href=""><button>Tokenomics</button></a>
