SLIGHT UI ADJUSTMENTS PERFORMED ON THE HOME PAGE VIA INDEX.HTML. A HOME BUTTON WAS ADDED TO THE INSTRUCTIONS PAGE TO IMPROVE NAVIGATION

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     </head>
 
     <body onload="initClock()"> 
-
         <div class="web-links">
             <a href="./sudoku.html"><button>Daily Sudoku</button></a>
             <a href="./instructions.html"><button>Instructions</button></a>
@@ -24,10 +23,11 @@
         </div>
         <h1 class="title">The Daily Puzzle</h1>
 
-        <p class="info">This paragraph will give a breif description of what this project entails</p>
+        <p class="info">The first puzzle hub built on the XRPL</p>
+        <p class="info">More puzzle modes coming soon...</p>
         
         <div class="exchange">
-            <p>Purchase tickets on the</p>
+            <!--<p>Purchase tickets on the</p>-->
             <a href="" class="hyperlink"><button class="sologenic"><strong>solo</strong>genic <strong class="redSolo">DEX</strong></button></a>
         </div>
 
@@ -46,7 +46,7 @@
                 <span id="period"></span>
             </div>
         </div>
-        
+        <div class="extra-space"></div>
         <div class="footer">
             <a href="https://twitter.com/dailyPuzzleXRPL">
                 <img src="./images/twitter-logo.png" class="twitter">
