Created an NFT gallery layout, along with a lightbox for better viewing. Updated cursor UI on all pages when hovering over a clickable link/button. Updated sudoku game cursor hover. Made it so that when you hover over a non-prefilled tile on the sudoku board, it changes colour, so that users know exactly which tile they are on.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="./sudoku.html"><button>Daily Sudoku</button></a>
             <a href="./instructions.html"><button>Instructions</button></a>
             <a href=""><button>Monthly Leaderboards</button></a>
-            <a href=""><button>NFT Gallery</button></a>
+            <a href="./gallery.html"><button>NFT Gallery</button></a>
             <a href=""><button>Tokenomics</button></a>
         </div>
         <div class="xumm">
