--- a/instructions.html
+++ b/instructions.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
         <link rel="stylesheet" href="./css/styles.css"> 
         <link rel="stylesheet" href="./css/instructions.css">
+        <title>Instructions</title>
         <script src="./js/instructions.js"></script>
     </head>
     <body>
