Firstly, I added a time penalty to the sudoku game, so that every time the user makes a mistake, they recieve a 1 min penatly (up to a maximum of 2 min). Next, I updated the src for the NFTs in an attempt to fix the github pages image sourcing error. However, the old NFT array is still needed in order to allow for lightbox arrow functionality!

--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
 
         <script>
             for (let x = 0; x < NFTs.length; x++) {
-                const element = '<img src="' + NFTs[x] + '" onclick="openFullNFT(this.src)">'
+                const element = '<img src="' + sourcedNFTs[x] + '" onclick="openFullNFT(this.src)">' //Changed the NFT src from the way it was formatted in the NFTs array to the updated sourcedNFTs array which should allow the images to load on github pages now! If this needs to be reverted, all that needs to be done is changing the array in this line back to 'NFTs'
                 document.querySelector('.NFTs').innerHTML += element;
             }
 
