I beleive I have fixed the sourcing for the gallary images while also keeping the lightbox arrow functionality intact. However, I am not sure if the sourcing for the lightbox imaging has been fixed

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,9 @@
 
             function openFullNFT(NFT) {
                 fullNFTBox.style.display = "flex"
-                fullNFT.src = NFT
+                var sourceNFT = '.' + NFT.slice(39)
+                console.log(sourceNFT)
+                fullNFT.src = sourceNFT
                 document.getElementById("owner").innerHTML = `Owner: ${issuerAddress}`;
             }
 
@@ -46,7 +48,8 @@
             }
 
             function goPrevious() {
-                var position = NFTs.indexOf(fullNFT.src)
+                var position = NFTs.indexOf('.' + fullNFT.src.slice(39))
+                console.log(position)
                 if (position == 0) {
                     return
                 } else if (position > 0) {
@@ -55,7 +58,7 @@
             }
 
             function goNext() {
-                var position = NFTs.indexOf(fullNFT.src)
+                var position = NFTs.indexOf('.' + fullNFT.src.slice(39))
                 if (position == NFTs.length - 1) {
                     return
                 } else if (position < NFTs.length) {
